[tool.poetry]
name = "delivery-event-api"
version = "0.1.0"
description = ""
authors = ["hiJin97 <hnh092600@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.29.5"
pika = "^1.3.2"
boto3 = "^1.36.18"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
